# mcppalloc

./: CMakeLists.txt  README.md
mcppalloc/mcppalloc/include/mcppalloc/: allocator_policy.hpp  allocator_thread_policy.hpp  block.hpp  declarations.hpp  default_allocator_policy.hpp  default_allocator_thread_policy.hpp  object_state.hpp  object_state_impl.hpp  user_data_base.hpp
mcppalloc_bitmap/mcppalloc_bitmap/include/mcppalloc/mcppalloc_bitmap/: dynamic_bitmap_ref.hpp  dynamic_bitmap_ref_impl.hpp  integer_block.hpp  integer_block_impl.hpp
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator/: CMakeLists.txt
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator/include/mcppalloc/mcppalloc_bitmap_allocator/: bitmap_allocator.hpp  bitmap_allocator_impl.hpp  bitmap_allocator_stats.hpp  bitmap_package.hpp  bitmap_package_impl.hpp  bitmap_state.hpp  bitmap_state_impl.hpp  bitmap_thread_allocator.hpp  bitmap_thread_allocator_impl.hpp  bitmap_type_info.hpp  bitmap_type_info_impl.hpp  declarations.hpp
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator/src/: bitmap_allocator.cpp  bitmap_allocator_stats.cpp  bitmap_package.cpp  bitmap_state.cpp  bitmap_thread_allocator.cpp  main.cpp
mcppalloc_bitmap_allocator/mcppalloc_bitmap_allocator_test/: CMakeLists.txt  bitmap.cpp
mcppalloc_slab_allocator/mcppalloc_slab_allocator/: CMakeLists.txt
mcppalloc_slab_allocator/mcppalloc_slab_allocator/include/mcppalloc/mcppalloc_slab_allocator/: slab_allocator.hpp  slab_allocator_impl.hpp  slab_allocator_inlines.hpp
mcppalloc_sparse/mcppalloc_sparse/: CMakeLists.txt
mcppalloc_sparse/mcppalloc_sparse/include/mcppalloc/mcppalloc_sparse/: allocator.hpp  allocator_block.hpp  allocator_block_handle.hpp  allocator_block_impl.hpp  allocator_block_set.hpp  allocator_block_set_impl.hpp  allocator_impl.hpp  debug.hpp  declarations.hpp  functor.hpp  sparse_allocator_block_base.hpp  sparse_allocator_block_set_verifier.hpp  sparse_allocator_verifier.hpp  thread_allocator.hpp  thread_allocator_abs_data.hpp  thread_allocator_abs_data_impl.hpp  thread_allocator_impl.hpp
mcppalloc_sparse/mcppalloc_sparse/src/: allocator.cpp  allocator_block.cpp  allocator_block_set.cpp  sparse_allocator_block_set_verifier.cpp  sparse_allocator_verifier.cpp  thread_allocator.cpp
mcppalloc_sparse/mcppalloc_sparse_test/: CMakeLists.txt  allocator_block_set_tests.cpp  allocator_block_tests.cpp  allocator_tests.cpp  main.cpp  slab_allocator.cpp
